--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "air-conditioner",
-  "description": "云空调，便携小空调",
-  "version": "0.1.2",
+  "name": "chkt",
+  "description": "菜花空调",
+  "version": "0.1.0",
   "private": true,
   "author": {
-    "url": "https://www.yunyoujun.cn",
-    "email": "me@yunyoujun.cn",
-    "name": "YunYouJun"
+    "url": "https://github.com/SHDocter/chkt",
+    "email": "Sun_Set1102@outlook.com",
+    "name": "SHDocter(原项目：YunYouJun)"
   },
   "scripts": {
     "dev": "yarn start",
@@ -38,9 +38,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/YunYouJun/air-conditioner"
+    "url": "https://github.com/SHDocter/chkt"
   },
-  "homepage": "https://ac.yunyoujun.cn/",
+  "homepage": "https://github.com/SHDocter/chkt",
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
