--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chkt",
   "description": "菜花空调",
-  "version": "0.1.5",
+  "version": "0.2.1",
   "private": true,
   "author": {
     "url": "https://github.com/SHDocter/chkt",
@@ -40,24 +40,22 @@
     "type": "git",
     "url": "https://github.com/YunYouJun/air-conditioner"
   },
-  "repository1": {
-    "type": "git",
-    "url": "https://github.com/SHDocter/chkt"
-  },
-  "homepage": "https://chkt.vercel.app/",
+  "homepage": "https://ac.yunyoujun.cn/",
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.33",
-    "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.8",
+    "@material-ui/core": "^5.0.0-alpha.37",
+    "@material-ui/styles": "^4.11.4",
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.5.0",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.4",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -65,11 +63,12 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "sass": "^1.32.12",
-    "typescript": "^4.2.4",
+    "sass": "^1.35.1",
+    "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@material-ui/icons": "^5.0.0-alpha.37",
     "@types/react-router-dom": "^5.1.7"
   }
 }
